# Taxi_ML

./: MLmodel.ipynb  README.md  app.py  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
